Bug 121974 - kde5: "Edit" -> "Repeat: Input" menu item text in calc incorrectly shown
Summary: kde5: "Edit" -> "Repeat: Input" menu item text in calc incorrectly shown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2018-12-08 02:42 UTC by Michael Weghorn
Modified: 2018-12-14 14:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2018-12-08 02:42:00 UTC
This is specific to the qt5/kde5 VCL plugin. It works as expected when using e.g. the gtk3 VCL plugin instead.

Version: 6.3.0.0.alpha0+
Build ID: cb52b112c0d44d7a6849f773fd1ee4e863ab91da
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

Steps to reproduce:

1) open a new Calc document
2) type some text into a cell
3) open the "Edit" menu
4) look at the "Repeat" entry (3rd entry from the top with the above commit)

Result: The entry's text is shown as "~Repeat: Input"

Expected result: The text should be displayed as "Repeat: Input", i.e. without the leading ampersand character.
Comment 1 Michael Weghorn 2018-12-08 02:45:07 UTC
Gerrit change: https://gerrit.libreoffice.org/#/c/64796/
Comment 2 Commit Notification 2018-12-08 10:50:54 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ee53d07ae17747cb81340c05983b1937bd23c136%5E%21

tdf#121974 Convert Qt menu text as needed

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-12-14 14:00:33 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/2aee047beae576823c4625678c6220012ff95c88%5E%21

tdf#121974 Convert Qt menu text as needed

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.