tdf#121974 Convert Qt menu text as needed

Just as is already done in 'Qt5Menu::InsertMenuItem',
the text needs to be converted in 'Qt5Menu::SetItemText'
as well.

Change-Id: I03c8f2e6fe0e926a3f7e4be5b7eac70f1bd9850f
Reviewed-on: https://gerrit.libreoffice.org/64796
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit ee53d07ae17747cb81340c05983b1937bd23c136)
Reviewed-on: https://gerrit.libreoffice.org/65154